--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -166,7 +166,6 @@ jobs:
         provenance: false
         push: true
         tags: |
-          requarks/wiki:canary-${{ matrix.docker }}-${{ env.REL_VERSION_STRICT }}
           ghcr.io/titanomyrma/wiki-test:canary-${{ matrix.docker }}-${{ env.REL_VERSION_STRICT }}
 
   windows:
@@ -237,13 +236,11 @@ jobs:
       run: |
         echo "Creating the manifests..."
 
-        docker manifest create requarks/wiki:beta-$REL_VERSION_STRICT requarks/wiki:canary-$REL_VERSION_STRICT requarks/wiki:canary-arm64-$REL_VERSION_STRICT
-        docker manifest create ghcr.io/requarks/wiki:beta-$REL_VERSION_STRICT ghcr.io/titanomyrma/wiki-test:canary-$REL_VERSION_STRICT ghcr.io/titanomyrma/wiki-test:canary-arm64-$REL_VERSION_STRICT
+        docker manifest create ghcr.io/titanomyrma/wiki-test:beta-$REL_VERSION_STRICT ghcr.io/titanomyrma/wiki-test:canary-$REL_VERSION_STRICT ghcr.io/titanomyrma/wiki-test:canary-arm64-$REL_VERSION_STRICT
 
         echo "Pushing the manifests..."
 
-        docker manifest push -p requarks/wiki:beta-$REL_VERSION_STRICT
-        docker manifest push -p ghcr.io/requarks/wiki:beta-$REL_VERSION_STRICT
+        docker manifest push -p ghcr.io/titanomyrma/wiki-test:beta-$REL_VERSION_STRICT
 
   release:
     name: Publish Release Images
@@ -281,25 +278,17 @@ jobs:
         echo "Using major $MAJOR and minor $MINOR..."
         echo "Creating the manifests..."
 
-        docker manifest create requarks/wiki:$REL_VERSION_STRICT requarks/wiki:canary-$REL_VERSION_STRICT requarks/wiki:canary-arm64-$REL_VERSION_STRICT
-        docker manifest create requarks/wiki:$MAJOR requarks/wiki:canary-$REL_VERSION_STRICT requarks/wiki:canary-arm64-$REL_VERSION_STRICT
-        docker manifest create requarks/wiki:$MAJORMINOR requarks/wiki:canary-$REL_VERSION_STRICT requarks/wiki:canary-arm64-$REL_VERSION_STRICT
-        docker manifest create requarks/wiki:latest requarks/wiki:canary-$REL_VERSION_STRICT requarks/wiki:canary-arm64-$REL_VERSION_STRICT
-        docker manifest create ghcr.io/requarks/wiki:$REL_VERSION_STRICT ghcr.io/titanomyrma/wiki-test:canary-$REL_VERSION_STRICT ghcr.io/titanomyrma/wiki-test:canary-arm64-$REL_VERSION_STRICT
-        docker manifest create ghcr.io/requarks/wiki:$MAJOR ghcr.io/titanomyrma/wiki-test:canary-$REL_VERSION_STRICT ghcr.io/titanomyrma/wiki-test:canary-arm64-$REL_VERSION_STRICT
-        docker manifest create ghcr.io/requarks/wiki:$MAJORMINOR ghcr.io/titanomyrma/wiki-test:canary-$REL_VERSION_STRICT ghcr.io/titanomyrma/wiki-test:canary-arm64-$REL_VERSION_STRICT
-        docker manifest create ghcr.io/requarks/wiki:latest ghcr.io/titanomyrma/wiki-test:canary-$REL_VERSION_STRICT ghcr.io/titanomyrma/wiki-test:canary-arm64-$REL_VERSION_STRICT
+        docker manifest create ghcr.io/titanomyrma/wiki-test:$REL_VERSION_STRICT ghcr.io/titanomyrma/wiki-test:canary-$REL_VERSION_STRICT ghcr.io/titanomyrma/wiki-test:canary-arm64-$REL_VERSION_STRICT
+        docker manifest create ghcr.io/titanomyrma/wiki-test:$MAJOR ghcr.io/titanomyrma/wiki-test:canary-$REL_VERSION_STRICT ghcr.io/titanomyrma/wiki-test:canary-arm64-$REL_VERSION_STRICT
+        docker manifest create ghcr.io/titanomyrma/wiki-test:$MAJORMINOR ghcr.io/titanomyrma/wiki-test:canary-$REL_VERSION_STRICT ghcr.io/titanomyrma/wiki-test:canary-arm64-$REL_VERSION_STRICT
+        docker manifest create ghcr.io/titanomyrma/wiki-test:latest ghcr.io/titanomyrma/wiki-test:canary-$REL_VERSION_STRICT ghcr.io/titanomyrma/wiki-test:canary-arm64-$REL_VERSION_STRICT
 
         echo "Pushing the manifests..."
 
-        docker manifest push -p requarks/wiki:$REL_VERSION_STRICT
-        docker manifest push -p requarks/wiki:$MAJOR
-        docker manifest push -p requarks/wiki:$MAJORMINOR
-        docker manifest push -p requarks/wiki:latest
-        docker manifest push -p ghcr.io/requarks/wiki:$REL_VERSION_STRICT
-        docker manifest push -p ghcr.io/requarks/wiki:$MAJOR
-        docker manifest push -p ghcr.io/requarks/wiki:$MAJORMINOR
-        docker manifest push -p ghcr.io/requarks/wiki:latest
+        docker manifest push -p ghcr.io/titanomyrma/wiki-test:$REL_VERSION_STRICT
+        docker manifest push -p ghcr.io/titanomyrma/wiki-test:$MAJOR
+        docker manifest push -p ghcr.io/titanomyrma/wiki-test:$MAJORMINOR
+        docker manifest push -p ghcr.io/titanomyrma/wiki-test:latest
 
     - name: Download Linux Build
       uses: actions/download-artifact@v4
@@ -343,22 +332,6 @@ jobs:
         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
-    - name: Notify Telegram Channel
-      uses: appleboy/telegram-action@v0.1.1
-      with:
-        to: ${{ secrets.TELEGRAM_TO }}
-        token: ${{ secrets.TELEGRAM_TOKEN }}
-        format: markdown
-        disable_web_page_preview: true
-        message: |
-          Wiki.js *${{ github.ref_name }}* has been released!
-          See [release notes](https://github.com/requarks/wiki/releases) for details.
-
-    - name: Notify Discord Channel
-      uses: sebastianpopp/discord-action@v2.0
-      with:
-        webhook: ${{ secrets.DISCORD_WEBHOOK }}
-        message: Wiki.js ${{ github.ref_name }} has been released! See https://github.com/requarks/wiki/releases for details.
 
   # build-do-image:
   #   name: Build DigitalOcean Image
