--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,31 @@ env:
   BASE_DEV_VERSION: 2.5.0
 
 jobs:
+  postgres:
+    name: Postgres
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build and push Docker images
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: dev/build/Dockerfile
+        push: true
+        tags: |
+          ghcr.io/titanomyrma/wiki-test/postgres:canary
+          ghcr.io/titanomyrma/wiki-test/postgres:canary-${{ env.REL_VERSION_STRICT }}
 
   build:
     name: Build
