--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
     - name: pull and push Docker images
       run:
 	  docker pull -a postgres:15-alpine
-          docker push -a ghcr.io/titanomyrma/wiki-test/postgres:canary
+          docker push -a ghcr.io/titanomyrma/wiki-test/postgres:canary postgres:15-alpine
 
   build:
     name: Build
